- updated eslint config to allow underscore properties - added skipFirstAnimation animation - renamed card to bio-card and all of its children - added generic component ScoreList (mobile) - added Table Component (a grid component, this will generate some refactors in the future) - added ScoreListResponsive to display a table of scores (desktop) and a list of scores (mobile) - added collapse option to the CardComponent - added rows to the ListComponent

--- a/src/app/auth/auth-steam/steam-register/steam-register.component.html
+++ b/src/app/auth/auth-steam/steam-register/steam-register.component.html
@@ -1,7 +1,7 @@
 <form [controlGroup]="form" (groupSubmit)="submit()" *ngIf="state$ | async as state">
-  <card>
-    <h3 cardTitle>Register Steam</h3>
-    <card-content>
+  <bio-card>
+    <h3 bioCardTitle>Register Steam</h3>
+    <bio-card-content>
       <ng-container *ngIf="state.emailSent; else emailForm">
         <p>Please confirm the code we sent to your e-mail</p>
         <bio-confirmation-code-input
@@ -22,11 +22,11 @@
           </errors>
         </form-field>
       </ng-template>
-    </card-content>
-    <card-actions end>
+    </bio-card-content>
+    <bio-card-actions end>
       <button bioButton primary type="submit" [disabled]="form.invalid" [loading]="state.loading">
         {{ state.emailSent ? 'Send confirmation code' : 'Register' }}
       </button>
-    </card-actions>
-  </card>
+    </bio-card-actions>
+  </bio-card>
 </form>
