--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,7 +1,7 @@
 <form [controlGroup]="emailForm" (groupSubmit)="submit()">
-  <card *ngLet="state$ | async as state">
-    <h3 cardTitle>Forgot password</h3>
-    <card-content *ngIf="state.emailSent; else email">
+  <bio-card *ngLet="state$ | async as state">
+    <h3 bioCardTitle>Forgot password</h3>
+    <bio-card-content *ngIf="state.emailSent; else email">
       <bio-confirmation-code-input
         controlName="code"
         (focusoutLastItem)="inputNewPassword.focus()"
@@ -22,9 +22,9 @@
         </errors>
       </form-field>
       <bio-password-strong [password]="password$ | async"></bio-password-strong>
-    </card-content>
+    </bio-card-content>
     <ng-template #email>
-      <card-content>
+      <bio-card-content>
         <p>Forgot your password? No problemo, just fill the box bellow with your e-mail and hit the button</p>
         <form-field label="E-mail">
           <input autocomplete="email" placeholder="E-mail" bioInput controlName="email" type="email" />
@@ -33,13 +33,13 @@
             <error *error="'required'">E-mail is required</error>
           </errors>
         </form-field>
-      </card-content>
+      </bio-card-content>
     </ng-template>
 
-    <card-actions>
+    <bio-card-actions>
       <button bioButton type="submit" primary [disabled]="emailForm.invalid" [loading]="state.loading">
         {{ state.emailSent ? 'Change password' : 'Send confirmation code' }}
       </button>
-    </card-actions>
-  </card>
+    </bio-card-actions>
+  </bio-card>
 </form>
