--- a/src/styles/_table.scss
+++ b/src/styles/_table.scss
@@ -2,6 +2,8 @@
 
 .flex-table {
   font-size: 0.85rem;
+  background-color: $primary;
+  color: $primary-600;
   &.card {
     background-color: $primary;
     color: $primary-600;
