--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <form [controlGroup]="form" (groupSubmit)="login()">
-  <card>
-    <h3 cardTitle>Login</h3>
-    <card-content>
+  <bio-card>
+    <h3 bioCardTitle>Login</h3>
+    <bio-card-content>
       <form-field>
         <label>Username</label>
         <input autocomplete="username" bioInput controlName="username" />
@@ -31,8 +31,8 @@
         Remember me
       </label>
       <p *ngIf="error$ | async as error" class="text-danger">{{ error }}</p>
-    </card-content>
-    <card-actions end *ngLet="loading$ | async as loading">
+    </bio-card-content>
+    <bio-card-actions end *ngLet="loading$ | async as loading">
       <button
         bioButton
         primary
@@ -52,6 +52,6 @@
       >
         Login
       </button>
-    </card-actions>
-  </card>
+    </bio-card-actions>
+  </bio-card>
 </form>
