--- a/src/app/player/player-profile/player-profile.component.scss
+++ b/src/app/player/player-profile/player-profile.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   justify-content: center;
-  > card {
+  > .card {
     max-width: 599px;
     width: 100%;
     .card-subtitle.about-me {
