--- a/src/app/score/score-world-record/score-world-record-history/score-world-record-history.component.html
+++ b/src/app/score/score-world-record/score-world-record-history/score-world-record-history.component.html
@@ -1,6 +1,6 @@
-<card>
-  <h3 cardTitle>Parameters</h3>
-  <card-content>
+<bio-card collapsable>
+  <h3 bioCardTitle>Parameters</h3>
+  <bio-card-content>
     <bio-params (paramsChange)="paramsChange($event)" [config]="paramsConfig" setQueryParamsOnChange>
       <form-field label="Type" *ngLet="type$ | async as type">
         <bio-select [model]="type" (modelChange)="typeChange($event)">
@@ -10,17 +10,11 @@
         </bio-select>
       </form-field>
     </bio-params>
-  </card-content>
-</card>
-<card class="scores">
-  <card-content>
-    <bio-list>
-      <bio-list-item *ngFor="let score of scores$ | async; trackBy: trackByScore">
-        [{{ score.gameShortName }} {{ score.platformShortName }}] {{ score.miniGameName }} {{ score.modeName }} -
-        {{ score.stageName }} '{{ score.scorePlayers | join: 'characterCostumeShortName' }}' {{ score.score }} - (
-        {{ score.worldRecordEndDate | date }}
-        )
-      </bio-list-item>
-    </bio-list>
-  </card-content>
-</card>
+  </bio-card-content>
+</bio-card>
+<bio-score-list-responsive
+  *ngIf="scores$ | async as scores"
+  [scores]="scores"
+  [loading]="loading$ | async"
+  [colDefs]="colDefs"
+></bio-score-list-responsive>
