--- a/src/app/shared/components/form/form-field.component.scss
+++ b/src/app/shared/components/form/form-field.component.scss
@@ -3,7 +3,7 @@
 .form-field {
   display: block;
   > .input-wrapper {
-    z-index: 1;
+    // z-index: 1; TODO If anything breaks on the form-field, that because of me
     position: relative;
 
     &.has-prefix {
