--- a/src/app/shared/components/list/list-item.component.html
+++ b/src/app/shared/components/list/list-item.component.html
@@ -12,5 +12,7 @@
   *ngIf="listParentControl && value"
 />
 <ng-content select="[prefix]"></ng-content>
-<ng-content></ng-content>
+<div class="list-item-content">
+  <ng-content></ng-content>
+</div>
 <ng-content select="[suffix]"></ng-content>
