- renaming LoadingComponent selector from loading to bio-loading - removed @Input() show from LoadingComponent - removed unnecessary div from LoadingComponent (do the styling in the host) - added animation of fadeInOut in the LoadingComponent - changed ScoreApproval to use the new ScoreListResponsive component - added metadata to the TableComponent (to be used with custom cell component) - added notifyChange output to the TableComponent (to be used with custom cell component) - minor optimization in the button HostBinding - renamed CellComponent to TableCellComponent - added custom orderByKey to TableComponent - reduce the amount of colDef conversion calls in the TableComponent - major optimizations in the TooltipDirectives (removed body click event, clearTimeout only when necessary) - dispose tooltip when the disabled input is set to true - do not do unnecessary array operations to get the positions everytime the Tooltip is being created - fix ParamsComponent emitting multiple changes when clearing values -

--- a/src/app/region/region-select/region-select.component.html
+++ b/src/app/region/region-select/region-select.component.html
@@ -1,4 +1,4 @@
-<loading [show]="loading$ | async"></loading>
+<bio-loading *ngIf="loading$ | async"></bio-loading>
 <h3 modalTitle>Region</h3>
 <div modalTitle>
   <label class="cdk-visually-hidden" for="search">Search</label>
