--- a/src/app/score/score-shared/score-list-responsive/score-list-responsive.component.html
+++ b/src/app/score/score-shared/score-list-responsive/score-list-responsive.component.html
@@ -11,9 +11,11 @@
     [loading]="loading"
     [paginationMeta]="paginationMeta"
     [trackBy]="trackByScore"
+    [metadata]="metadata"
     (currentPageChange)="currentPageChange.emit($event)"
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (orderChange)="orderChange.emit($event)"
+    (notifyChange)="notifyChange.emit($event)"
   >
   </bio-table>
 </ng-template>
