--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -40,8 +40,8 @@
   }
 
   .header {
-    &.order {
-      > div:not(:last-child):not(:first-child):not(.platform) {
+    &.header-order {
+      > .order-by {
         cursor: pointer;
       }
     }
