- optimization in the score-list-responsive (table) using trackBy index instead of idScore - use pipe to format the value instead of the for of (col defs) in the table cell - fix the metadata being passed wrongly to the table cell custom component - managed to improve the performance in the score-list-responsive (table) from 90 ~~ 140ms to 40 ~ 60ms per render

--- a/src/app/shared/components/table/table-cell/table-cell.component.html
+++ b/src/app/shared/components/table/table-cell/table-cell.component.html
@@ -6,7 +6,7 @@
   >
   </ng-container>
   <ng-template #noTemplate>
-    {{ item[colDef.propertyFormatted] }}
+    {{ item[colDef.property] | tableCellFormatter: colDef.formatter }}
   </ng-template>
 </ng-container>
 <ng-template cdkPortalOutlet></ng-template>
