- added collapsable to the params in the score approval component - styling to the list of scores - added ListSelectableDirective (mostly for styling)

--- a/src/app/score/score-shared/score-approval/score-approval.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval.component.html
@@ -1,4 +1,4 @@
-<bio-card class="params">
+<bio-card class="params" collapsable>
   <h3 bioCardTitle>Parameters</h3>
   <bio-card-content>
     <bio-params
