--- a/src/app/score/score-shared/score-list/score-list.component.scss
+++ b/src/app/score/score-shared/score-list/score-list.component.scss
@@ -8,4 +8,16 @@
 .scores {
   background-color: v.$primary;
   color: v.$primary-600;
+  padding: 0;
+  .list-item {
+    padding: 1rem 0.75rem;
+    &:first-of-type {
+      border-top-left-radius: v.$radius;
+      border-top-right-radius: v.$radius;
+    }
+    &:last-of-type {
+      border-bottom-left-radius: v.$radius;
+      border-bottom-right-radius: v.$radius;
+    }
+  }
 }
