--- a/src/app/score/score-shared/score-info/score-info-modal/score-info-modal.component.html
+++ b/src/app/score/score-shared/score-info/score-info-modal/score-info-modal.component.html
@@ -1,10 +1,10 @@
-<modal-content>
+<bio-modal-content>
   <bio-score-info
     [score]="score"
     [showWorldRecord]="showWorldRecord"
     [showApprovalDate]="showApprovalDate"
   ></bio-score-info>
-</modal-content>
-<modal-actions end>
+</bio-modal-content>
+<bio-modal-actions end>
   <button bioButton type="button" (click)="modalRef.close()">Close</button>
-</modal-actions>
+</bio-modal-actions>
