--- a/src/app/core/error/error.component.html
+++ b/src/app/core/error/error.component.html
@@ -1,8 +1,8 @@
-<h1 modalTitle>{{ httpError?.status }} - {{ httpError?.message }}</h1>
-<modal-content>
+<h1 bioModalTitle>{{ httpError?.status }} - {{ httpError?.message }}</h1>
+<bio-modal-content>
   <p *ngIf="httpError?.error">Error: {{ httpError?.error }}</p>
   <p *ngIf="httpError?.sqlMessage">SQL Message: {{ httpError?.sqlMessage }}</p>
-</modal-content>
-<modal-actions>
-  <button modalClose bioButton>Close</button>
-</modal-actions>
+</bio-modal-content>
+<bio-modal-actions>
+  <button bioModalClose bioButton>Close</button>
+</bio-modal-actions>
