--- a/src/app/region/region-select/region-select.component.html
+++ b/src/app/region/region-select/region-select.component.html
@@ -1,10 +1,10 @@
 <bio-loading *ngIf="loading$ | async"></bio-loading>
-<h3 modalTitle>Region</h3>
-<div modalTitle>
+<h3 bioModalTitle>Region</h3>
+<div bioModalTitle>
   <label class="cdk-visually-hidden" for="search">Search</label>
   <input id="search" placeholder="Search" bioInput type="search" [control]="searchControl" autocomplete="off" />
 </div>
-<bio-list modalContent [(model)]="idRegion">
+<bio-list bioModalContent [(model)]="idRegion">
   <cdk-virtual-scroll-viewport
     itemSize="44"
     [style.height.px]="10 * 44"
@@ -18,7 +18,7 @@
     <bio-list-item *ngIf="!all.length"> No data found </bio-list-item>
   </cdk-virtual-scroll-viewport>
 </bio-list>
-<modal-actions end *ngLet="saving$ | async as saving">
+<bio-modal-actions end *ngLet="saving$ | async as saving">
   <button bioButton type="button" (click)="onSave()" [loading]="saving">Save</button>
   <button bioButton type="button" (click)="onClose()" [disabled]="saving">Close</button>
-</modal-actions>
+</bio-modal-actions>
