--- a/src/app/shared/components/modal/dialog/dialog.component.html
+++ b/src/app/shared/components/modal/dialog/dialog.component.html
@@ -1,11 +1,11 @@
-<h5 modalTitle *ngIf="data.title">
+<h5 bioModalTitle *ngIf="data.title">
   <icon *ngIf="!(data.type | any: typesWithoutIcon)" [ngSwitch]="data.type">
     <ng-container *ngSwitchCase="dialogType.success">check_circle_outline</ng-container>
   </icon>
   {{ data.title }}
 </h5>
-<modal-content [innerHTML]="data.content"></modal-content>
-<modal-actions end *ngIf="state$ | async as state">
+<bio-modal-content [innerHTML]="data.content"></bio-modal-content>
+<bio-modal-actions end *ngIf="state$ | async as state">
   <button
     bioButton
     primary
@@ -28,4 +28,4 @@
   >
     {{ data.btnYes }}
   </button>
-</modal-actions>
+</bio-modal-actions>
