- fixed ModalConfigLazy typing no inferring type of data - fixed PaginationComponent not working properly on mobile - added ScoreApprovalActionsModal for mobile users select the type of approval in the ScoreApprovalComponent - added missing pagination to ScoreListComponent - removed border-radius com ScoreListComponent (since pagination fixed that)

--- a/src/app/score/score-shared/score-approval/score-approval.component.html
+++ b/src/app/score/score-shared/score-approval/score-approval.component.html
@@ -24,5 +24,6 @@
     (currentPageChange)="changeCurrentPage($event)"
     (orderChange)="changeOrder($event)"
     (notifyChange)="onNotifyChange($event)"
+    (scoreClicked)="openModalSelectApprovalType($event)"
   ></bio-score-list-responsive>
 </ng-container>
