- added option to show tooltip with the same value as the cell in the TableComponent - fixed typing tooltipPosition in the TooltipDirective

--- a/src/app/shared/components/table/table-cell/table-cell.component.html
+++ b/src/app/shared/components/table/table-cell/table-cell.component.html
@@ -6,7 +6,14 @@
   >
   </ng-container>
   <ng-template #noTemplate>
-    {{ item[colDef.property] | tableCellFormatter: colDef.formatter }}
+    <span
+      *ngLet="item[colDef.property] | tableCellFormatter: colDef.formatter as value"
+      [tooltip]="item | tableCellTooltip: colDef.tooltip:value"
+      [tooltipPosition]="colDef.tooltipPosition"
+      [tooltipDisabled]="!colDef.tooltip"
+    >
+      {{ value }}
+    </span>
   </ng-template>
 </ng-container>
 <ng-template cdkPortalOutlet></ng-template>
