--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -25,16 +25,15 @@
       <div class="no-data-found" *ngIf="!data.length">No data found</div>
       <ng-container *ngFor="let item of data; trackBy: trackBy">
         <div>
-          <bio-cell
-            *ngFor="let colDef of colDefs; trackBy: trackByColDef"
-            [ngStyle]="colDef.bodyStyle"
-            [colDef]="colDef"
-            [item]="item"
-            [tooltip]="colDef.tooltip ? item[colDef.tooltip] + '' : ''"
-            [tooltipDisabled]="!colDef.tooltip"
-            [metadata]="metadata"
-            (notifyChange)="notifyChange.emit($event)"
-          ></bio-cell>
+          <ng-container *ngFor="let colDef of colDefs; trackBy: trackByColDef">
+            <bio-cell
+              [ngStyle]="colDef.bodyStyle"
+              [colDef]="colDef"
+              [item]="item"
+              [metadata]="metadata"
+              (notifyChange)="notifyChange.emit($event)"
+            ></bio-cell>
+          </ng-container>
         </div>
         <hr />
       </ng-container>
